--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@alfsnd/vue-bootstrap-select": "^0.4.4",
     "@vueform/multiselect": "^2.6.2",
-    "axios": "^1.3.4",
+    "this.$http": "^1.3.4",
     "boosted": "^5.2.3",
     "bootstrap": "^5.2.3",
     "bootstrap-select": "^1.13.18",
